--- a/src/styles.css
+++ b/src/styles.css
@@ -57,7 +57,7 @@ h2 {
 }
 .date {
   font-size: 14px;
-  color: #b7a291;
+  color: #967d69;
   opacity: 0.7;
   text-align: left;
   padding-left: 30px;
@@ -71,7 +71,7 @@ h2 {
 .time small {
   font-size: 20px;
   vertical-align: top;
-  line-height: 45px;
+  line-height: 47px;
   opacity: 0.8;
   text-transform: uppercase;
 }
