--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,13 @@ h1 {
   padding-top: 40px;
   padding-bottom: 30px;
 }
+h1 a {
+  color: #594f45;
+  text-decoration: none;
+}
+h1 a:hover {
+  opacity: 0.7;
+}
 select {
   display: block;
   width: 600px;
